# livl-board-games

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
archives/TP1-ex1/: functions.hpp  main.cpp
archives/TP1-ex3/: main.cpp
archives/TP2/: round.cpp  triangle.hpp
img/: img.qrc
src/: README.md  main.cpp
src/TP1/: functions.cpp  functions.hpp  main.cpp
src/TP1-ex1/: functions.cpp  functions.hpp  main.cpp
src/TP1-ex3/: functions.cpp  functions.hpp  main.cpp
src/TP1-ex3_2/: main.cpp
src/TP1-tenis/: functions.cpp  functions.hpp  main.cpp
src/TP2/: functions.cpp  functions.hpp  main.cpp  point.hpp  rectangle.cpp  rectangle.hpp  round.cpp  round.hpp  triangle.cpp  triangle.hpp
src/TP3/: README.md  cell.hpp  functions.cpp  functions.hpp  game.cpp  game.hpp  grid.cpp  grid.hpp  main.cpp  morpion.hpp  player.hpp  symbol.cpp  symbol.hpp
src/TP3/exceptions/: occupied-cell-exception.hp  occupied-cell-exception.hpp  out-of-bounds-exception.hpp
src/TP3/games/: gameFactory.cpp  gameFactory.hpp  power4.cpp  power4.hpp  tictactoe.hpp
src/TP3/games/defaults/: defaultGameEvaluator.cpp  defaultGameEvaluator.hpp
src/TP3/games/othello/: othello.cpp  othello.hpp  othelloGameEvaluator.cpp  othelloGameEvaluator.hpp  othelloGrid.hpp  othelloPositionRequester.cpp  othelloPositionRequester.hpp
src/TP3/games/power4/: power4.cpp  power4.hpp  power4CellRequester.cpp  power4CellRequester.hpp  power4Grid.cpp  power4Grid.hpp  power4PositionRequester.cpp  power4PositionRequester.hpp
src/TP3/games/tictactoe/: tictactoe.cpp  tictactoe.hpp  tictactoeCellRequester.cpp  tictactoeCellRequester.hpp  tictactoeGrid.hpp  tictactoePositionRequester.cpp  tictactoePositionRequester.hpp
src/TP3/interfaces/: cellRequester.hpp  game.cpp  game.hpp  gameEvaluator.hpp  grid.cpp  grid.hpp  positionRequester.hpp
src/TP3/models/: player.cpp  player.hpp  position.hpp
src/TP3/shared/: consoleHandler.cpp  consoleHandler.hpp  functions.cpp  functions.hpp  shared.cpp  shared.hpp
src/TP3/shared/evaluators/: linearGameEvaluator.cpp  linearGameEvaluator.hpp
src/TP3/shared/exceptions/: column-full-exception.hpp  occupied-position-exception.hpp  out-of-bounds-exception.hpp
src/cli/: consoleHandler.cpp  consoleHandler.hpp  consoleInterface.cpp  consoleInterface.h  gameConsoleInteractions.cpp  gameConsoleInteractions.h  menuConsoleInterface.cpp  menuConsoleInterface.h
src/controllers/: GameController.cpp  GameController.h  MenuController.cpp  MenuController.h
src/forms/: gamewindow.cpp  gamewindow.h  main.cpp  menu.cpp  menu.h
src/games/: gameFactory.cpp  gameFactory.hpp
src/games/checkers/: checkers.cpp  checkers.hpp  checkersGrid.cpp  checkersGrid.hpp  checkersPositionRequester.cpp  checkersPositionRequester.hpp  checkersToken.cpp  checkersToken.hpp
src/games/othello/: othello.cpp  othello.hpp  othelloGameEvaluator.cpp  othelloGameEvaluator.hpp  othelloPositionRequester.cpp  othelloPositionRequester.hpp
src/games/power4/: power4.hpp  power4Grid.cpp  power4Grid.hpp  power4PositionRequester.cpp  power4PositionRequester.hpp
src/games/tictactoe/: tictactoe.cpp  tictactoe.hpp  tictactoePositionRequester.cpp  tictactoePositionRequester.hpp
src/gui/: gameGuiInteractions.cpp  gameGuiInteractions.h  guiInterface.cpp  guiInterface.h  menuGuiInteractions.cpp  menuGuiInteractions.h
src/gui/components/: gridcomponent.cpp  gridcomponent.h
src/gui/forms/: gamewindow.cpp  gamewindow.h  menu.cpp
src/gui/forms/game/: gamewindow.cpp  gamewindow.h  gamewindow.ui
src/gui/forms/menu/: menu.cpp  menu.h  menu.ui
src/interfaces/: game.cpp  game.hpp  gameInteractions.h  gameInterface.h  grid.cpp  grid.hpp  menuInteractions.h  positionRequester.hpp  token.hpp
src/models/: Game.cpp  Game.h  Grid.cpp  Grid.h  MenuData.cpp  MenuData.h  PlayerId.h  Position.cpp  Position.h  Subject.cpp  Subject.h  Token.cpp  Token.h  player.cpp  player.hpp
src/models/enums/: GameMode.h  InterfaceMode.h  PlayMode.h
src/models/evaluators/: CheckersEvaluator.cpp  CheckersEvaluator.h  LinearGameEvaluator.cpp  LinearGameEvaluator.h  OthelloGameEvaluator.cpp  OthelloGameEvaluator.h
src/models/exceptions/: FileNotExistException.h  OutOfBoundsException.h  UnimplementedPlayMode.h
src/models/games/checkers/: Checkers.cpp  Checkers.h
src/models/games/checkers/players/: CheckersComputerPlayer.cpp  CheckersComputerPlayer.h  CheckersHumanPlayer.h
src/models/games/checkers/tokens/: CheckersToken.cpp  CheckersToken.h  CheckersTokenType.h
src/models/games/connectFour/: ConnectFour.cpp  ConnectFour.h
src/models/games/connectFour/players/: ConnectFourComputerPlayer.cpp  ConnectFourComputerPlayer.h  ConnectFourHumanPlayer.cpp  ConnectFourHumanPlayer.h
src/models/games/othello/: Othello.cpp  Othello.h
src/models/games/othello/players/: OthelloComputerPlayer.cpp  OthelloComputerPlayer.h  OthelloHumanPlayer.h
src/models/games/ticTacToe/: TicTacToe.cpp  TicTacToe.h
src/models/interfaces/: GameEvaluator.h  GameObservable.h  GameObserver.h  Observable.h  Observer.h  Player.h  Serializable.h  Token.h
src/models/types/: GameGrid.h  Round.h  TokenType.h
src/shared/: Shared.cpp  Shared.h  Shared.hpp  SoundPlayer.cpp  SoundPlayer.h  consoleHandler.cpp  consoleHandler.hpp  interactionsProvider.cpp  interactionsProvider.h  interfaceProvider.cpp  interfaceProvider.h  shared.hpp
src/shared/evaluators/: linearGameEvaluator.cpp  linearGameEvaluator.hpp
src/shared/exceptions/: column-full-exception.hpp
src/ui/components/: gridcomponent.cpp  gridcomponent.h  gridcomponent.ui
src/ui/forms/: gamewindow.cpp  gamewindow.h  menu.h
src/views/cli/: ConsoleHandler.cpp  ConsoleHandler.h
src/views/cli/game/: GameConsole.cpp  GameConsole.h
src/views/cli/menu/: MenuConsole.cpp  MenuConsole.h
src/views/gui/components/: GridComponent.cpp  GridComponent.h  GridComponent.ui
src/views/gui/windows/game/: GameWindow.cpp  (+2 more)
src/views/interfaces/: GameInteraction.h  GameView.h  MenuInteraction.h
(+7 files in other folders)
